Hardened production backend: Restricted CORS, removed fallback secrets, implemented rate limiting, password reset, and admin broadcasts